# GeometricUnity

./: .gitignore  ARCH_P10.md  ARCH_P11.md  ARCH_P4.md  ARCH_P5.md  ARCH_P6.md  ARCH_P7.md  ARCH_P8.md  ARCH_P9.md  ASSUMPTIONS.md  CLAUDE.md  CUDA_GAPS.md  DEEP_RESEARCH_PROMPT.md  EXP_PHASE_6.md  EXP_PHASE_V.md  ExperimentReferences.md  GAPS_P5_01.md  GPU_TEST.md  GeometricUnity.slnx  HOW_TO.md  IMPLEMENTATION_P10.md  IMPLEMENTATION_P11.md  IMPLEMENTATION_P12.md  IMPLEMENTATION_P13.md  IMPLEMENTATION_P14.md  IMPLEMENTATION_P15.md  IMPLEMENTATION_P16.md  IMPLEMENTATION_P17.md  IMPLEMENTATION_P18.md  IMPLEMENTATION_P19.md  IMPLEMENTATION_P20.md  IMPLEMENTATION_P21.md  IMPLEMENTATION_P22.md  IMPLEMENTATION_P23.md  IMPLEMENTATION_P24.md  IMPLEMENTATION_P25.md  IMPLEMENTATION_P26.md  IMPLEMENTATION_P27.md  IMPLEMENTATION_P28.md  IMPLEMENTATION_P29.md  (+73 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
OriginalPrompts/: GeometricUnitPromptPlan.md  Prompt0.1.md  Prompt02.md  Prompt1.1.md  Prompt1.2  Prompt2.1.md  Prompt2.2.md  Prompt3.1.md  Prompt3.2.md  Prompt3.3.md  Prompt3.4.md  Prompt3.5.md  Prompt3.6.md  Prompt4.1.md  Prompt4.2.md  Prompt5.1.md  Prompt5.2.md  Prompt5.3.md  Prompt5.4.md  Prompt6.2.md  Propmt6.1.md
TheoryCompletitionRevisions/: Geometric_Unit_Completion.md  Geometric_Unity_Completion_CumulativeChanges.md  Geometric_Unity_Completion_Reorganized_Updated.md  Geometric_Unity_Completion_Reorganized_Updated_v12.md  Geometric_Unity_Completion_Reorganized_Updated_v13.md  Geometric_Unity_Completion_Reorganized_Updated_v15.md  Geometric_Unity_Completion_Reorganized_Updated_v18.md  Geometric_Unity_Completion_Reorganized_Updated_v19.md  Geometric_Unity_Completion_Reorganized_Updated_v20.md  Geometric_Unity_Completion_Reorganized_Updated_v21.md  Geometric_Unity_Completion_Reorganized_Updated_v22.md  Geometric_Unity_Completion_Reorganized_Updated_v24.md  Geometric_Unity_Completion_Reorganized_Updated_v25.md  Geometric_Unity_Completion_Reorganized_Updated_v26.md  Geometric_Unity_Completion_Reorganized_Updated_v27.md  Geometric_Unity_Completion_Reorganized_Updated_v29.md  Geometric_Unity_Completion_Reorganized_Updated_v5.md  Geometric_Unity_Completion_Reorganized_Updated_v6.md  Geometric_Unity_Completion_Reorganized_Updated_v7.md  Geometric_Unity_Completion_Reorganized_Updated_v8.md
apps/Gu.Benchmarks/: BenchmarkReport.cs  BenchmarkRunner.cs  Gu.Benchmarks.csproj  Program.cs
apps/Gu.Cli/: BranchQuantityValuesLoader.cs  Gu.Cli.csproj  Program.cs
apps/Gu.Workbench/: Gu.Workbench.csproj  Phase3ArtifactLoader.cs  Phase3ViewPayloads.cs  Program.cs
docs/: BOSON_PREDICTION_AGENT_RESTART_PROMPT.md  BOSON_PREDICTION_DIAGNOSIS_JOURNAL.md
docs/Architecture/: ARCHITECTURE_P2.md  ARCH_P10.md  ARCH_P11.md  ARCH_P4.md  ARCH_P5.md  ARCH_P6.md  ARCH_P7.md  ARCH_P8.md  ARCH_P9.md
docs/Guides/: HOW_TO.md
docs/Phases/: CONVENTION_ROBUSTNESS_TRANCHE_PLAN_2026-07-15.md  EXPLORATORY_SELF_AUDIT_PLAN_2026-07-15.md  FOUR_D_PLATFORM_BUILD_PLAN.md  FOUR_D_PLATFORM_DESIGN.md  FOUR_D_PLATFORM_PHYSICS_DECISIONS.md  PHASE455_CONVENTION_CLOSURE_PLAN_2026-07-15.md  PHASE456_FORENSIC_RECOVERY_PLAN_2026-07-15.md  PHASE_NUMBER_REGISTRY.md  TEAM_ELIMINATION_PROGRAM_2026-07-10.md  WAVE2_ACTION_PLAN_2026-07-12.md  WAVE2_AMENDMENTS_2026-07-12.md
docs/Reference/: ASSUMPTIONS.md
examples/minimal_v1_4d/: branch.json  environment.json  geometry.json
examples/toy_branch_2d/: branch.json  environment.json  geometry.json
examples/toy_branch_3d/: branch.json  environment.json  geometry.json
native/: CMakeLists.txt
native/gu_cuda_core/include/: gu_cuda_core.h
native/gu_cuda_core/src/: gu_cuda_core.c
native/gu_cuda_kernels/include/: gu_cuda_kernels.h
native/gu_cuda_kernels/src/: gu_cuda_kernels.cu
native/gu_native_common/include/: gu_interop_types.h
native/gu_phase2_cuda/include/: gu_phase2_cuda.h
native/gu_phase2_cuda/src/: branch_kernels.cu  continuation_kernels.cu  gu_phase2_init.cu  hessian_actions.cu  jacobian_actions.cu  spectrum_probes.cu
native/gu_vulkan_native/include/: gu_vulkan_bridge.h
native/gu_vulkan_native/src/: gu_vulkan_bridge.c
phase4/: chirality_policy.json  conjugation_policy.json  coupling_campaign.json  family_clustering_policy.json  fermion_mode_study.json  particle_identification_policy.json  spinor_spec.json
reports/templates/: branch_sweep.md  canonicity_docket.md  comparison_campaign.md  coupling_atlas.md  fermion_family_atlas.md  stability_atlas.md  theory_conformance.md  (+1 more)
schemas/: artifact.schema.json  background_record.schema.json  background_study.schema.json  boson_campaign.schema.json  boson_registry.schema.json  boson_report.schema.json  branch.schema.json  branch_distance_matrix.schema.json  branch_family.schema.json  branch_field_layout.schema.json  branch_robustness_record.schema.json  branch_robustness_study.schema.json  branch_sweep_result.schema.json  branch_variant.schema.json  canonicity_docket.schema.json  canonicity_evidence.schema.json  comparison_campaign.schema.json  continuation_result.schema.json  continuum_estimate.schema.json  coupling_consistency.schema.json  environment_campaign.schema.json  environment_record.schema.json  environment_variance.schema.json  falsifier_record.schema.json  geometry.schema.json  identified_physical_mode.schema.json  internal_vector_boson_source_candidate.schema.json  internal_vector_boson_source_readiness_campaign.schema.json  internal_vector_boson_source_spectrum_campaign.schema.json  mode_family.schema.json  mode_identification_evidence.schema.json  mode_record.schema.json  observable_classification.schema.json  observation_chain.schema.json  observed.schema.json  phase5_campaign.schema.json  physical_calibration.schema.json  physical_observable_mapping.schema.json  prediction_test_record.schema.json  principal_symbol.schema.json  (+11 more)
scripts/: BosonPhasesTraversal.proj  boson_incremental_manifest.json  generate_validated_boson_predictions.sh  phase13_ci_gate.sh  run_boson_phases_incremental.sh  run_phase5_gap_closure_batch.mjs  run_phase5_gap_closure_batch.sh  verify_boson_claim_integrity.sh
(+7346 files in other folders)
